<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_attachments"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="invisible">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageButton
                android:id="@+id/menu_attachment_document"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/attach_document"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_document" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageButton
                android:id="@+id/menu_attachment_camera"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/attach_camera"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageButton
                android:id="@+id/menu_attachment_gallery"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/attach_gallery"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_gallery" />
        </LinearLayout>

    </LinearLayout>


    <!--row 2 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageButton
                android:id="@+id/menu_attachment_audio"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/attach_audio"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_audio" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageButton
                android:id="@+id/menu_attachment_location"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/attach_location"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageButton
                android:id="@+id/menu_attachment_contact"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/attach_contact"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_contact" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>