<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f0f0f0"

    android:layout_marginBottom="2dp"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profile"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:riv_corner_radius="52dp"
        app:riv_border_color="@color/riv_border_color"
        app:riv_border_width="1dip"
        android:src="@drawable/ic_profile"
        android:layout_marginRight="10dp"/>

    <FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/message_body"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_toRightOf="@id/profile"
        >


        <LinearLayout
            android:gravity="end"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/contact_jid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_example_com"
                tools:text="@string/server_text"
                android:textSize="@dimen/default_message_chat_text_size"
                android:textColor="@color/default_message_color_send"
                android:layout_gravity="center"
                />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:id="@+id/message_abstract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_message"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:id="@+id/text_message_timestamp"
                tools:text="12:10 am"
                android:textSize="@dimen/default_timestamp_text_size"
                android:textColor="@color/default_tstamp_color_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/chat_right_margin"/>

        </LinearLayout>


    </FrameLayout>


</RelativeLayout>